@@ -292,6 +292,16 @@ DefParam("usebrowserinfo",
 	 "b",
 	 1);
 
+DefParam("usedependencies",
+         "Do you wish to use dependencies (allowing you to mark which bugs depend on which other ones)?",
+         "b",
+         1);
+
+DefParam("webdotbase",
+         "This is the URL prefix that is common to all requests for webdot.  The <a href=http://www.research.att.com/~north/cgi-bin/webdot.cgi>webdot package</a> is a very swell thing that generates pictures of graphs.  If you have an installation of bugsplat that hides behind a firewall, then to get graphs to work, you will have to install a copy of webdot behind your firewall, and change this path to match.  Also, webdot has some trouble with software domain names, so you may have to play games and hack the %urlbase% part of this.  If this all seems like too much trouble, you can set this paramater to be the empty string, which will cause the graphing feature to be disabled entirely.",
+         "t",
+         "http://www.research.att.com/~north/cgi-bin/webdot.cgi/%urlbase%");
+
 DefParam("expectbigqueries",
          "If this is on, then we will tell mysql to <tt>set option SQL_BIG_TABLES=1</tt> before doing queries on bugs.  This will be a little slower, but one will not get the error <tt>The table ### is full</tt> for big queries that require a big temporary table.",
          "b",
